# substraTEE-node-pre2.0.0

./: .gitlab-ci.yml  Cargo.toml  Jenkinsfile  README.md  TESTNET_SPECIFICATION.md
client/: Cargo.toml  init_demo.sh
client/src/: cli.yml  main.rs
doc/: BOOTSTRAPPING.md  CEREMONY_THREAT_MODEL.md  README.md  TESTNET_SPECIFICATION.md  probability_of_malicious_majority.m
host_calls/: Cargo.toml
host_calls/src/: lib.rs  remote_attestation.rs
runtime/: Cargo.toml
runtime/src/: encointer_ceremonies.rs  lib.rs  substratee_registry.rs
src/: chain_spec.rs  cli.rs  command.rs  main.rs  service.rs
