[package]
name = "substratee-node"
version = "4.0.1"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"
edition = "2018"

[workspace]
members = [
    "host_calls",
    "runtime",
]

[[bin]]
name = "substratee-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
structopt = "0.3.8"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate"
package = "sp-core"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-inherents]
git = "https://github.com/paritytech/substrate"
package = "sp-inherents"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-transaction-pool]
git = "https://github.com/paritytech/substrate"
package = "sp-transaction-pool"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-transaction-pool]
git = "https://github.com/paritytech/substrate"
package = "sc-transaction-pool"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-network]
git = "https://github.com/paritytech/substrate"
package = "sc-network"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-consensus-aura]
git = "https://github.com/paritytech/substrate"
package = "sp-consensus-aura"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-consensus-aura]
git = "https://github.com/paritytech/substrate"
package = "sc-consensus-aura"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-consensus]
git = "https://github.com/paritytech/substrate"
package = "sp-consensus"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate"
package = "sc-finality-grandpa"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate"
package = "sp-finality-grandpa"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate"
package = "sc-client"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.substratee-node-runtime]
path = "runtime"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
package = "sp-runtime"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sc-basic-authorship]
git = "https://github.com/paritytech/substrate"
package = "sc-basic-authorship"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.host_calls]
path = "host_calls"

[build-dependencies]
vergen = "3.0.4"

[build-dependencies.build-script-utils]
git = "https://github.com/paritytech/substrate"
package = "substrate-build-script-utils"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"
