[package]
name = "encointer-client"
version = "0.1.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "brenzi-fix-double-map"}
log = "0.4"
env_logger = "0.6"
hex = "0.3.2"
json = "0.12.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = "0.6.2"
serde_json      = { version = "1.0"}
clap            = { version = "2.33", features = [ "yaml" ] }
primitive-types = { version = "0.5", default-features = false, features = ["codec"] }

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
rev = "9b08e7ff938a45dbec7fcdb854063202e2b0cb48"
package = "substrate-primitives"

[dependencies.keystore]
git = 'https://github.com/paritytech/substrate'
rev = "9b08e7ff938a45dbec7fcdb854063202e2b0cb48"
package = "substrate-keystore"

[dependencies.balances]
git = 'https://github.com/paritytech/substrate'
rev = "9b08e7ff938a45dbec7fcdb854063202e2b0cb48"
package = "srml-balances"
default-features=false

[dependencies.system]
git = 'https://github.com/paritytech/substrate'
rev = "9b08e7ff938a45dbec7fcdb854063202e2b0cb48"
package = "srml-system"
default-features=false

[dependencies.encointer-node-runtime]
git = 'https://github.com/encointer/encointer-node'
branch = "PoC1"
package = "encointer-node-runtime"

[dependencies.keyring]
git = 'https://github.com/paritytech/substrate'
rev = "9b08e7ff938a45dbec7fcdb854063202e2b0cb48"
package = "substrate-keyring"


[patch."https://github.com/paritytech/substrate"]
substrate-primitives = { package = "substrate-primitives", git = "https://github.com/scs/substrate-api-client", branch = "brenzi-fix-double-map", default-features = false }

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}