[dependencies.aura]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-aura'
branch = "brenzi-contract-replace-sr-io"

[dependencies.balances]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-balances'
branch = "brenzi-contract-replace-sr-io"

[dependencies.client]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'substrate-client'
branch = "brenzi-contract-replace-sr-io"

[dependencies.consensus]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-consensus'
branch = "brenzi-contract-replace-sr-io"

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'substrate-consensus-aura-primitives'
branch = "brenzi-contract-replace-sr-io"

[dependencies.consensus_authorities]
default-features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'substrate-consensus-authorities'
branch = "brenzi-contract-replace-sr-io"

[dependencies.executive]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-executive'
branch = "brenzi-contract-replace-sr-io"

[dependencies.indices]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-indices'
branch = "brenzi-contract-replace-sr-io"

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'substrate-offchain-primitives'
branch = "brenzi-contract-replace-sr-io"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.3'

[dependencies.primitives]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'substrate-primitives'
branch = "brenzi-contract-replace-sr-io"

[dependencies.rstd]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'sr-std'
branch = "brenzi-contract-replace-sr-io"

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'sr-io'
branch = "brenzi-contract-replace-sr-io"

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'sr-primitives'
branch = "brenzi-contract-replace-sr-io"

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-sudo'
branch = "brenzi-contract-replace-sr-io"

[dependencies.contract]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-contract'
branch = "brenzi-contract-replace-sr-io"
features = ["core"]

[dependencies.support]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-support'
branch = "brenzi-contract-replace-sr-io"

[dependencies.system]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-system'
branch = "brenzi-contract-replace-sr-io"

[dependencies.timestamp]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'srml-timestamp'
branch = "brenzi-contract-replace-sr-io"

[dependencies.version]
default_features = false
git = 'https://github.com/brenzi/substrate.git'
package = 'sr-version'
branch = "brenzi-contract-replace-sr-io"

[features]
default = ['std']
std = [
    'parity-codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'runtime-primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'consensus-aura/std',
    'offchain-primitives/std',
    'consensus_authorities/std',
    'contract/std'
]
no_global_allocator = [
	"rstd/no_global_allocator",
]
no_panic_handler = [
    "runtime-io/no_panic_handler"
]
no_oom = [
    "runtime-io/no_oom"
]

[package]
authors = ['Supercomputing Systems']
edition = '2018'
name = 'substratee-node-runtime'
version = '2.0.0'
