[package]
name = "substratee-node-runtime"
version = "4.0.1"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies.aura]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-aura"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-consensus-aura"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.balances]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-balances"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-block-builder"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.0.0"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-executive"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.grandpa]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-grandpa"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.indices]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-indices"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-inherents"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-offchain"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-core"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.randomness-collective-flip]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-randomness-collective-flip"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-std"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-io"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.safe-mix]
default-features = false
version = "1.0.0"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-api"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-runtime"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-sudo"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-support"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "frame-system"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-timestamp"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.transaction-payment]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "pallet-transaction-payment"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-transaction-pool"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-version"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"

# added by SCS
[dependencies.host_calls]
default-features = false
path = "../host_calls"

# added by SCS
[dev-dependencies.externalities]
default-features = false
git = "https://github.com/paritytech/substrate"
package = "sp-externalities"
rev = "1294685848c35114769fb4f766643f1b5bd1b516"


[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }

[features]
default = ["std"]
std = [
	"sp-consensus-aura/std",
	"aura/std",
	"balances/std",
	"sp-block-builder/std",
	"codec/std",
	"frame-executive/std",
	"grandpa/std",
	"indices/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-core/std",
	"randomness-collective-flip/std",
	"sp-std/std",
	"sp-io/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-runtime/std",
	"sp-session/std",
	"sudo/std",
	"frame-support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"host_calls/std",
]
